# neobee

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  app.py  package-lock.json  package.json  pyproject.toml
apps/server/: package.json  tsconfig.json
apps/server/src/: main.ts
apps/server/src/chains/: cross-review-chain.ts  deep-research-chain.ts  expert-creation-chain.ts  idea-synthesis-chain.ts  insight-refinement-chain.ts  summary-chain.ts
apps/server/src/controllers/: cross-review-controller.ts  deep-research-controller.ts  (+7 more)
apps/web/: index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/web/src/: App.tsx  i18n.ts  index.css  main.tsx  vite-env.d.ts
docs/: ARCHITECTURE.md  README.md  architecture-redesign-plan.md
neobee/: __init__.py  __main__.py
neobee/cli/: app.py  session_cmd.py
neobee/core/: config.py  db.py  llm.py  search.py
neobee/models/: __init__.py
neobee/pipeline/: _registry.py  _utils.py  graph.py  state.py  task_tracker.py
neobee/pipeline/agents/: _utils.py  expert_agent.py  idea_agent.py  insight_agent.py  research_agent.py
neobee/pipeline/nodes/: __init__.py  cross_review.py  debate_insight.py  deep_research.py  expert_creation.py  idea_factory.py  idea_synthesis.py  insight_refinement.py  opportunity_map.py
neobee/pipeline/tools/: search.py
neobee/storage/: session.py
neobee/webui/components/: __init__.py  cards.py  form.py  progress.py  sidebar.py  utils.py
neobee/webui/pages/: sessions.py
neobee/webui/styles/: __init__.py  base.py  components.py
pages/: 1_New_Session.py  2_Session_View.py
(+69 files in other folders)
