[project]
name = "neobee"
version = "0.1.0"
description = "AI-native brainstorming platform"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.0",
    "langchain-core>=1.4.0",
    "langchain-anthropic>=1.4.3",
    "langchain-openai>=1.2.1",
    "langgraph>=1.2.0",
    "langgraph-checkpoint>=4.1.0",
    "pydantic>=2.13.4",
    "streamlit>=1.57.0",
    "httpx>=0.28.0",
    "duckduckgo_search>=8.1.0",
    "python-dotenv>=1.0.0",
    "playwright>=1.59.0",
]

[tool.setuptools.packages.find]
include = ["neobee*"]
exclude = ["data*"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
